Backdrop lines don't match height in nla and dope-sheet #113365

Closed
opened 2023-10-06 21:13:52 +02:00 by Guillermo Venegas · 7 comments
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.13

Blender Version
Can confirm since 3.3.12

Short description of error

Action backdrop lines in don't match height in nla

image

And less noticeable also the summary backdrop line is misaligned don't match height in the dope sheet

image

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.13 **Blender Version** Can confirm since 3.3.12 **Short description of error** Action backdrop lines in don't match height in nla ![image](/attachments/7b027907-d65f-4b05-a518-f26c4b2fb33d) And less noticeable also the summary backdrop line is misaligned don't match height in the dope sheet ![image](/attachments/5efa64fe-1947-4feb-a8f3-38a22176cc0b)
111 KiB
110 KiB
Guillermo Venegas added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-06 21:13:53 +02:00
Member

Hi, thanks for the report. I'm not understanding the term "lines" you've used for.
AFAICS: - NLA/dopesheet channel text is bit off (not aligned to center)
- Channel needs some offset to properly display Push down operator

Hi, thanks for the report. I'm not understanding the term "lines" you've used for. AFAICS: - NLA/dopesheet channel text is bit off (not aligned to center) - Channel needs some offset to properly display [Push down operator](/attachments/41058100-208f-4ed1-a0a6-23966d552bac)
1.9 KiB
Pratik Borhade added
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-10-09 09:04:04 +02:00
Guillermo Venegas changed title from Misaligned lines in nla and dope-sheet to Backdrop lines in don't match height in nla and dope-sheet 2023-10-09 21:52:40 +02:00
Guillermo Venegas changed title from Backdrop lines in don't match height in nla and dope-sheet to Backdrop lines don't match height in nla and dope-sheet 2023-10-09 21:52:55 +02:00
Author
Contributor

Forgot edit issue to be more specific.

I mean the yellow background lines of actions in the nla don't have the same height that the action tab

Her a compassion with some changes

image

Forgot edit issue to be more specific. I mean the yellow background lines of actions in the nla don't have the same height that the action tab Her a compassion with some changes ![image](/attachments/98994342-04dd-4a38-81e6-8c392a6795ac)
102 KiB
Member

Can confirm, thanks :)
I'll check

Can confirm, thanks :) I'll check
Member

Quick fix for NLA can be:

diff --git a/source/blender/editors/space_nla/nla_draw.cc b/source/blender/editors/space_nla/nla_draw.cc
index e7b98545c7e..c8ba92d4db8 100644
--- a/source/blender/editors/space_nla/nla_draw.cc
+++ b/source/blender/editors/space_nla/nla_draw.cc
@@ -882,7 +882,7 @@ void draw_nla_main_data(bAnimContext *ac, SpaceNla *snla, ARegion *region)
                        v2d->cur.xmin,
                        ymin + NLACHANNEL_SKIP,
                        v2d->cur.xmax,
-                       ymax - NLACHANNEL_SKIP);
+                       ymax + NLACHANNEL_SKIP*0.5);
               break;
             }
             case NLASTRIP_EXTEND_HOLD_FORWARD: {
@@ -906,7 +906,7 @@ void draw_nla_main_data(bAnimContext *ac, SpaceNla *snla, ARegion *region)
                                     static_cast<bAction *>(ale->data),
                                     ycenter,
                                     ymin + NLACHANNEL_SKIP,
-                                    ymax - NLACHANNEL_SKIP);
+                                    ymax + NLACHANNEL_SKIP*0.5);

           GPU_blend(GPU_BLEND_NONE);
           break;

Results:

Main Patch
image image
Quick fix for NLA can be: ``` diff --git a/source/blender/editors/space_nla/nla_draw.cc b/source/blender/editors/space_nla/nla_draw.cc index e7b98545c7e..c8ba92d4db8 100644 --- a/source/blender/editors/space_nla/nla_draw.cc +++ b/source/blender/editors/space_nla/nla_draw.cc @@ -882,7 +882,7 @@ void draw_nla_main_data(bAnimContext *ac, SpaceNla *snla, ARegion *region) v2d->cur.xmin, ymin + NLACHANNEL_SKIP, v2d->cur.xmax, - ymax - NLACHANNEL_SKIP); + ymax + NLACHANNEL_SKIP*0.5); break; } case NLASTRIP_EXTEND_HOLD_FORWARD: { @@ -906,7 +906,7 @@ void draw_nla_main_data(bAnimContext *ac, SpaceNla *snla, ARegion *region) static_cast<bAction *>(ale->data), ycenter, ymin + NLACHANNEL_SKIP, - ymax - NLACHANNEL_SKIP); + ymax + NLACHANNEL_SKIP*0.5); GPU_blend(GPU_BLEND_NONE); break; ``` Results: | Main | Patch | | --- | --- | | ![image](/attachments/a4c62ed6-6fc4-405d-a3a4-f5e47ce9e3f3) | ![image](/attachments/413477dc-b564-4c08-9a6f-d2e7f3ebeab5) |
Member

In dopesheet, for drawing backdrop of frame-range, every channel type shares same dimensions. The difference is due to larger "summary" channel strip. This is likely an intentional change. Though Backdrop of channel and frame range cane be aligned by:

diff --git a/source/blender/editors/animation/anim_channels_defines.cc b/source/blender/editors/animation/anim_channels_defines.cc
index 1de1537ec6d..162c4a080f8 100644
--- a/source/blender/editors/animation/anim_channels_defines.cc
+++ b/source/blender/editors/animation/anim_channels_defines.cc
@@ -407,7 +407,7 @@ static void acf_summary_backdrop(bAnimContext *ac, bAnimListElem *ale, float ymi
   rctf box;
   box.xmin = 0;
   box.xmax = v2d->cur.xmax + EXTRA_SCROLL_PAD;
-  box.ymin = yminc - 2;
+  box.ymin = yminc;
   box.ymax = ymaxc;
   UI_draw_roundbox_3fv_alpha(&box, true, 8, color, 1.0f);
 }

I'll make a PR for NLA editor

In dopesheet, for drawing backdrop of frame-range, every channel type shares same dimensions. The difference is due to larger "summary" channel strip. This is likely an intentional change. Though Backdrop of channel and frame range cane be aligned by: ``` diff --git a/source/blender/editors/animation/anim_channels_defines.cc b/source/blender/editors/animation/anim_channels_defines.cc index 1de1537ec6d..162c4a080f8 100644 --- a/source/blender/editors/animation/anim_channels_defines.cc +++ b/source/blender/editors/animation/anim_channels_defines.cc @@ -407,7 +407,7 @@ static void acf_summary_backdrop(bAnimContext *ac, bAnimListElem *ale, float ymi rctf box; box.xmin = 0; box.xmax = v2d->cur.xmax + EXTRA_SCROLL_PAD; - box.ymin = yminc - 2; + box.ymin = yminc; box.ymax = ymaxc; UI_draw_roundbox_3fv_alpha(&box, true, 8, color, 1.0f); } ``` I'll make a PR for NLA editor
Author
Contributor

the fix for nla miss centering the diamonds

image

the fix for nla miss centering the diamonds ![image](/attachments/2cd30c20-9402-485e-9efa-60e429be5d01)
1.2 KiB
Member

Thanks @guishe . Did you check #113490 ?
No difference here with and without PR in keyframe alignment.

Thanks @guishe . Did you check https://projects.blender.org/blender/blender/pulls/113490 ? No difference here with and without PR in keyframe alignment.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-07 08:12:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113365
No description provided.