Fix #113365: Backdrop lines don't match height in nla

Adjust ymax of action in frame range so that hight will match with the
channel's height